@@ -250,7 +250,7 @@ Income is simple. You have a base income of 2 gold per turn. For every village y
 Upkeep is also fairly simple. Each unit requires an amount of Upkeep equal to its level. You can support as many levels <italic>text=worth</italic> of units as you have villages, without paying any upkeep. However, for each level of unit beyond the number of villages you have, you must pay one gold per turn. For example, if you have twelve level one units and ten villages, you would have to pay two gold each turn in upkeep." + _"
 
 Upkeep costs are subtracted from your Income, so in the case of twelve levels of units and ten villages, your resultant Income would be 10 gold per turn." + _"
-There is one important exception to Upkeep: units with the Loyal trait never incur upkeep. Units you begin the scenario with (such as Konrad or Delfador), or units who join you during a scenario (such as the Horseman in the second scenario of Heir to the Throne) will usually have the Loyal trait."
+There are two important exceptions to Upkeep: units with the Loyal trait and leaders never incur upkeep. Units you begin the scenario with (such as Delfador), or units who join you during a scenario (such as the Horseman in the second scenario of Heir to the Throne) will usually have the Loyal trait. The unit you are playing (such as Konrad) will almost always be a leader."
     [/topic]
 
     [topic]
